--- a/package.json
+++ b/package.json
@@ -28,14 +28,14 @@
   "module": "./dist/potree-loader.es.js",
   "types": "./dist/potree-loader.d.ts",
   "scripts": {
-    "start": "vite",
+    "start": "vite --host",
     "build": "vite build"
   },
   "devDependencies": {
-    "@types/three": "^0.138.0",
+    "@types/three": "^0.155.1",
     "concurrently": "^7.0.0",
     "path": "^0.12.7",
-    "three": "^0.138.3",
+    "three": "^0.156.0",
     "typescript": ">=3.0.0",
     "vite-plugin-glsl": "^0.1.1"
   }
